--- a/MVC/Areas/Admin/Views/ProductCategory/Index.cshtml
+++ b/MVC/Areas/Admin/Views/ProductCategory/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @using MVC.Areas.Admin.Models;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Categories";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 <div class="container-fluid">
