--- a/MVC/Views/Orders/Index.cshtml
+++ b/MVC/Views/Orders/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList;
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Order";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -45,21 +45,23 @@
                 <div class="row pb-1">
                     <div class="col-1">
                         <div class="row">
-                            <div class="col-auto mx-auto">
-                                <img src="@Url.Content("~/"+product.Image)" alt="Alternate Text" width="80" height="130" />
+                            <div class="col-auto mx-auto ">
+                                <a href="/Product/Detail/@product.ID">
+                                    <img src="@Url.Content("~/"+product.Image)" alt="Alternate Text" width="80" height="130" />
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-9 px-4">
+                    <div class="col-9 px-4 align-self-center">
                         <span class="h5">@product.Name</span>
                         <br />
                         <span>x@(product.Count)</span>
                     </div>
                     <div class="col-2 align-self-center px-4">
-                        <span class="float-right">
+                        <span class="float-right text-right">
                             @if (product.PromotionPrice != product.Price)
                             {
-                                <del>@(product.Price)đ</del>
+                                <del>@(product.Price)đ</del> <br/>
                                 <span class="text-danger">@(product.PromotionPrice)đ</span>
                             }
                             else
@@ -79,12 +81,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 px-4">
-                    <a href="#" class="btn btn-info float-right ml-4">Mua lần nữa</a>
-                    <form action="/Orders/Detail" method="post">
+                <div class="col-auto ml-auto">
+                    <form action="/Orders/Detail" method="post" class="w-auto">
                         <input type="text" name="OrderID" value="@item.ID" hidden />
-                        <button type="submit" class="btn btn-info float-right">Xem chi tiết</button>
+                        <button type="submit" class="btn btn-info">Xem chi tiết</button>
                     </form>
+
+                </div>
+                <div class="col-auto pl-0 pr-4">
+                    <button class="btn btn-info">Mua lần nữa</button>
+
                 </div>
             </div>
         </div>
@@ -109,7 +115,7 @@
                     // Cancel the default action, if needed
                     event.preventDefault();
                     // Trigger the button element with a click
-                    $("formOrder").submit();
+                    $("#formOrder").submit();
                 }
             });
         });
