--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -157,7 +157,9 @@
         <div class="background-img">
             <div class="row">
                 <div class="col">
-                    <img src="~/Resource/logo.png" height="100" width="225" alt="Alternate Text" />
+                    <a href="/Home">
+                        <img src="~/Resource/logo.png" height="100" width="225" alt="Alternate Text" />
+                    </a>
                 </div>
             </div>
         </div>
