--- a/MVC/Views/Profile/Index.cshtml
+++ b/MVC/Views/Profile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC.Models.User
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
