--- a/MVC/Areas/Admin/Views/Products/Update.cshtml
+++ b/MVC/Areas/Admin/Views/Products/Update.cshtml
@@ -33,7 +33,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputEmailAU">Image</label>
-                <input type="file" name="Hinh" id="HinhUpdate" class="form-control-file" />
+                <input type="file" name="Hinh" id="Hinh" class="form-control-file" />
                 @Html.TextBoxFor(model => model.Image, new { @hidden = true })
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
