--- a/MVC/Views/Product/Detail.cshtml
+++ b/MVC/Views/Product/Detail.cshtml
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-auto mx-auto">
                             <p class="text-center">
-                                <h5> Please login to comment</h5>
+                                <h5> Please login to do this</h5>
                             </p>
                         </div>
                     </div>
@@ -176,8 +176,17 @@
                             </div>
                             <div class="col pl-0 comment-body">
                                 <div class="row">
-                                    <div class="col-12 comment-name">
-                                        <span>@comment.Name</span>
+                                    <div class="col-12 ">
+                                        <div class="row">
+                                            <div class="col-auto comment-name">
+                                                <span class="">@comment.Name</span>
+
+                                            </div>
+                                            <div class="col-auto ml-auto">
+                                                <a href="" class="text-decoration-none text-dark">x</a>
+                                            </div>
+                                        </div>
+
                                     </div>
                                     <div class="col-12 comment-text">
                                         <p>@comment.Comment.Content</p>
@@ -186,7 +195,8 @@
                                         <ul class="p-0">
                                             <li class="d-inline-block"><i class="fa fa-clock-o"></i> @comment.Comment.CreateDate.Value.ToShortTimeString() &emsp;</li>
                                             <li class="d-inline-block"><i class="fa fa-calendar"></i> @comment.Comment.CreateDate.Value.Date.ToShortDateString() &emsp;</li>
-                                            <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a></li>
+                                            <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a> &emsp;</li>
+                                            <li class="d-inline-block"><a href="#edit-@comment.Comment.ID" class="text-decoration-none text-info" data-toggle="collapse">edit</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-12 comment-replies">
@@ -198,8 +208,12 @@
                                                 </div>
                                                 <div class="col pl-0 comment-body">
                                                     <div class="row">
-                                                        <div class="col-12 comment-name">
-                                                            <span>@reply.Name</span>
+                                                        <div class="col-auto comment-name">
+                                                            <span class="">@reply.Name</span>
+
+                                                        </div>
+                                                        <div class="col-auto ml-auto">
+                                                            <a href="" class="text-decoration-none text-dark">x</a>
                                                         </div>
                                                         <div class="col-12 comment-text">
                                                             <p>@reply.Comment.Content</p>
@@ -208,15 +222,30 @@
                                                             <ul class="p-0">
                                                                 <li class="d-inline-block"><i class="fa fa-clock-o"></i> @reply.Comment.CreateDate.Value.ToShortTimeString() &emsp;</li>
                                                                 <li class="d-inline-block"><i class="fa fa-calendar"></i> @reply.Comment.CreateDate.Value.Date.ToShortDateString() &emsp;</li>
-                                                                <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a></li>
+                                                                <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a> &emsp;</li>
+                                                                <li class="d-inline-block"><a href="#edit-reply-@reply.Comment.ID" class="text-decoration-none text-info" data-toggle="collapse">edit</a></li>
+
                                                             </ul>
                                                         </div>
 
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="row comment-create collapse pb-2 " id="edit-reply-@reply.Comment.ID">
+                                                <form action="/Product/Edit" method="post" class="w-100">
+                                                    <input type="text" name="idComment" value="@comment.Comment.ID" hidden />
+                                                    <div class="col-12">
+                                                        <textarea style="width:100%" rows="4" name="content"></textarea>
+                                                    </div>
+                                                    <div class="row w-100">
+                                                        <div class="col-auto ml-auto p-0">
+                                                            <button href="#" class="btn btn-secondary btn-edit" type="submit">update</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
                                         }
-                                        <div class="row comment-create collapse " id="create-new-@comment.Comment.ID">
+                                        <div class="row comment-create collapse" id="create-new-@comment.Comment.ID">
                                             <form action="/Product/Reply" method="post" class="w-100">
                                                 <input type="text" name="idProduct" value="@Model.MainProduct.ID" hidden />
                                                 <input type="text" name="idParent" value="@comment.Comment.ID" hidden />
@@ -231,12 +260,25 @@
                                             </form>
 
                                         </div>
+
                                     </div>
 
                                 </div>
                             </div>
                         </div>
-
+                        <div class="row comment-create collapse pt-2" id="edit-@comment.Comment.ID">
+                            <form action="/Product/Edit" method="post" class="w-100">
+                                <input type="text" name="idComment" value="@comment.Comment.ID" hidden />
+                                <div class="col-12">
+                                    <textarea style="width:100%" rows="4" name="content"></textarea>
+                                </div>
+                                <div class="row w-100">
+                                    <div class="col-auto ml-auto p-0">
+                                        <button href="#" class="btn btn-secondary btn-edit" type="submit">update</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     }
                 </div>
             </div>
