--- a/MVC/Views/Product/Detail.cshtml
+++ b/MVC/Views/Product/Detail.cshtml
@@ -179,9 +179,9 @@
                                     <div class="col-12 ">
                                         <div class="row">
                                             <div class="col-auto comment-name">
-                                                <span class="">@comment.Name 
+                                                <span class="">@comment.Name
                                                     @if (comment.Manager)
-                                                    {<span>- QTV</span>}
+                                                    {<span class="text-qtv">Quản trị viên</span>}
                                                 </span>
 
                                             </div>
@@ -220,7 +220,7 @@
                                                         <div class="col-auto comment-name">
                                                             <span class="">@reply.Name
                                                                 @if (reply.Manager)
-                                                                {<span>- QTV</span>}
+                                                                {<span class="text-qtv text-qtv-reply">Quản trị viên</span>}
                                                             </span>
 
                                                         </div>
