chart begin at zero

--- a/MVC/Areas/Admin/Views/Statistical/Index.cshtml
+++ b/MVC/Areas/Admin/Views/Statistical/Index.cshtml
@@ -67,7 +67,10 @@
                 {
                     id: 'second-y-axis',
                     type: 'linear',
-                    position: 'right'
+                    position: 'right',
+                    ticks: {
+                        beginAtZero: true
+                    }
 
                 }]
             },
@@ -108,12 +111,18 @@
                 yAxes: [{
                     id: 'first-y-axis',
                     type: 'linear',
-                    position: 'left'
+                    position: 'left',
+                    ticks: {
+                        beginAtZero: true
+                    }
                 },
                 {
                     id: 'second-y-axis',
                     type: 'linear',
-                    position: 'right'
+                    position: 'right',
+                    ticks: {
+                        beginAtZero: true
+                    }
 
                 }]
             },
@@ -153,12 +162,18 @@
                 yAxes: [{
                     id: 'first-y-axis',
                     type: 'linear',
-                    position: 'left'
+                    position: 'left',
+                    ticks: {
+                        beginAtZero: true
+                    }
                 },
                 {
                     id: 'second-y-axis',
                     type: 'linear',
-                    position: 'right'
+                    position: 'right',
+                    ticks: {
+                        beginAtZero: true
+                    }
 
                 }]
             },
@@ -198,12 +213,18 @@
                 yAxes: [{
                     id: 'first-y-axis',
                     type: 'linear',
-                    position: 'left'
+                    position: 'left',
+                    ticks: {
+                        beginAtZero: true
+                    }
                 },
                 {
                     id: 'second-y-axis',
                     type: 'linear',
-                    position: 'right'
+                    position: 'right',
+                    ticks: {
+                        beginAtZero: true
+                    }
 
                 }]
             },
@@ -230,6 +251,13 @@
             
         },
         options: {
+            scales: {
+                yAxes: {
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }
+            },
             title: {
                 display: true,
                 position: 'bottom',
@@ -253,6 +281,13 @@
             
         },
         options: {
+            scales: {
+                yAxes: {
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }
+            },
             title: {
                 display: true,
                 position: 'bottom',
@@ -276,6 +311,13 @@
             
         },
         options: {
+            scales: {
+                yAxes: {
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }
+            },
             title: {
                 display: true,
                 position: 'bottom',
